
  * Set HOME to current build directory when running test suite. This should
    fix failures of kwsys.testRegistry and FindPackageTest tests on the
    buildds.
  * Increase timeout of BootstrapTest to 2 hours so it no longer times out
    on s390 or armel (patch bootstraptest_increase_timeout.diff).
  * Fix GNU.cmake file used on Hurd. Thanks to Pino Toscano for the patch.

 -- Modestas Vainius <modestas@vainius.eu>  Sun, 22 Nov 2009 20:05:59 +0200

cmake (2.8.0-2) experimental; urgency=low

  * Reenable test suite.

 -- Modestas Vainius <modestas@vainius.eu>  Sun, 22 Nov 2009 00:38:54 +0200

cmake (2.8.0-1) unstable; urgency=low

  * New upstream release.
  * Disable test suite for now.

 -- Modestas Vainius <modestas@vainius.eu>  Sat, 14 Nov 2009 01:59:25 +0200

cmake (2.8.0~rc6-1) experimental; urgency=low

  * New upstream development release.
  * Switch debian/rules to use dh v7:
    - bump debhelper build depends to 7.3;
    - also drop unused Dart handling in the process;
    - enable test suite.
  * Add myself as Maintainer, A. Maitland Bottoms as Uploader (with
    permission).

 -- Modestas Vainius <modestas@vainius.eu>  Tue, 10 Nov 2009 23:46:25 +0200

cmake (2.8.0~rc5-1) experimental; urgency=low

  * New upstream development release.
    - FindJNI.cmake does no longer get confused about multiple JVM installs
      (Closes: #553151).
  * Switch to dpkg-source format 3.0 (quilt):
    - drop build dependency on quilt;
    - drop quilt.make snippet include from debian/rules.
  * Build with CMAKE_USE_RELATIVE_PATHS=ON.
  * Drop tcp8.4 from build depends. Not needed.

 -- Modestas Vainius <modestas@vainius.eu>  Fri, 06 Nov 2009 22:47:17 +0200

cmake (2.8.0~rc3-1) experimental; urgency=low

  * New upstream development release.
    - ctest no longer segfaults on such a invalid input (Closes: #528530).
  * Drop all patches:
    - FindQt4.cmake2.6.diff - remove, no longer needed as original bug has been
      fixed since 2.6;