@@ -5,7 +5,7 @@ Maintainer: Modestas Vainius <modestas@vainius.eu>
 Uploaders: A. Maitland Bottoms <bottoms@debian.org>
 DM-Upload-Allowed: yes
 Build-Depends: debhelper (>= 7.3), libcurl4-gnutls-dev, libxmlrpc-c3-dev, libexpat1-dev, zlib1g-dev,
- libncurses5-dev, libqt4-dev (>= 4.4.0)
+ libncurses5-dev, libqt4-dev (>= 4.4.0), g++-4.4 [hppa]
 Standards-Version: 3.8.3
 Vcs-Git: git://git.debian.org/git/collab-maint/cmake.git
 Vcs-Browser: http://git.debian.org/?p=collab-maint/cmake.git;a=summary
